# CRep

./: .gitmodules
lab2/: CMakeLists.txt  main.cpp  test.cpp
lab2/util/: CMakeLists.txt  util.cpp  util.h
lab3/: CMakeLists.txt  newton_method.cpp  tests
lab4/: CMakeLists.txt
lab4/app/: main.cpp
lab4/include/iomanipulators/: manipulator1.h  manipulator2.h  manipulator3.h
lab4/src/: manipulator2.cpp  manipulator3.cpp
lab4/tests/: CMakeLists.txt  test_global.cpp  test_manipulator1.cpp  test_manipulator2.cpp  test_manipulator3.cpp
lab4_1/: CMakeLists.txt
lab4_1/app/: CMakeLists.txt  main.cpp
lab4_1/include/iomanipulators/: manipulator1.h  manipulator2.h  manipulator3.h
lab4_1/src/: CMakeLists.txt  manipulator1.cpp  manipulator2.cpp
lab4_1/tests/: CMakeLists.txt  test_global.cpp
lab5/: CMakeLists.txt
lab5/include/: proxy.hpp
lab6/tests/: iterator.cpp
lab7/include/: variant.hpp
lab7/tests/: variant.cpp
lab8/include/: json.hpp
lab8/tests/: json.cpp
lab9/tests/: type_map.cpp
